--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,19 +1,28 @@
-<%- include("partials/header") -%>
-
-<div class="ui main text container segment">
-    <div class="ui huge header">Login</div>
-    <form class="ui form" action="/login" method="POST">
-        <div class="field">
-            <label>Email</label>
-            <input type="email" name="email" placeholder="Email" required>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Login</title>
+    <link rel="stylesheet" href="/stylesheets/login-style.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700&display=swap" rel="stylesheet">
+</head>
+<body>
+    <main>
+        <div class="background">
+            <div class="text">
+                <h1>Login</h1>
+                <p>No Account? <a href="signup.html">Sign up</a></p>
+            </div>
+            <div class="box">
+                <form class="form">
+                    <input type="text" class="username" placeholder="Username" required>
+                    <input type="password" class="password" placeholder="Password" required>
+                    <input type="submit" class="button" value="Login">
+                </form>
+            </div>
         </div>
-        <div class="field">
-            <label>Password</label>
-            <input type="password" name="password" placeholder="Password" pattern=".{5,10}" required title="password must be between 5 to 10 character">
-        </div>
-        <button class="ui violet basic button">Login</button>
-    {{!-- <a href="/resendToken" class="resend">Resend Token</a> --}}
-    </form>
-</div>
-
-<%- include("partials/footer") -%>
+    </main>
+</body>
+</html>
