--- a/public/views/home.html
+++ b/public/views/home.html
@@ -6,15 +6,15 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <title>techcare.com
 </title>
-<link rel="stylesheet" type="text/css" href="home.css">
+<link rel="stylesheet" type="text/css" href="./stylesheets/home.css">
 <style>
 </style></head>
 <body>
 <div class="nav">
 <img src="./images/logo.jpeg" alt=""/>
 <a class="hactive" href="home.html"><b>Home</b></a>
-<a href="./Register" ><b>Register</b></a>
-<a href="./Login"><b>Login</b></a>
+<a href="/register" ><b>Register</b></a>
+<a href="/login"><b>Login</b></a>
 <a href="/About"><b>About Us</b></a>
 </div>
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
