--- a/public/views/login.hbs
+++ b/public/views/login.hbs
@@ -13,7 +13,7 @@
         <div class="background">
             <div class="text">
                 <h1>Login</h1>
-                <p>No Account? <a href="signup.html">Sign up</a></p>
+                <p>No Account? <a href="/register">Sign up</a></p>
             </div>
             <div class="box">
                 <form class="form">
