--- a/public/views/register.hbs
+++ b/public/views/register.hbs
@@ -13,7 +13,7 @@
         <div class="background">
             <div class="text">
                 <h1>Register</h1>
-                <p>Have Account? <a href="login.hbs">Login</a></p>
+                <p>Have Account? <a href="/login">Login</a></p>
             </div>
             <div class="box">
                 <form class="form">
