signup-login-backend

--- a/public/views/login.hbs
+++ b/public/views/login.hbs
@@ -16,10 +16,10 @@
                 <p>No Account? <a href="/register">Sign up</a></p>
             </div>
             <div class="box">
-                <form class="form">
-                    <input type="text" class="username" placeholder="Username" required>
-                    <input type="password" class="password" placeholder="Password" required>
-                    <input type="submit" class="button" value="Login">
+                <form class="form" method="post" action="/login">
+                    <input name = "email" type="text" class="username" placeholder="Email" required>
+                    <input name = "password" type="password" class="password" placeholder="Password" required>
+                    <input  type="submit" class="button" value="Login">
                 </form>
             </div>
         </div>
